--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,27 @@
 			<version>4.0.1</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<!-- lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.38</version>
+		</dependency>
+
+		<!-- jackson(json) -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.15.4</version> <!-- 최신 안정 버전 권장 -->
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.17.1</version> <!-- Jackson 버전에 맞게 수정 -->
+		</dependency>
+		
+
 	</dependencies>
 
 	<build>
@@ -71,7 +92,7 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>3.3.2</version>
 				<configuration>
-					<warName>spring-legacy</warName>
+					<warName>sseTest</warName>
 					<outputDirectory>${project.build.directory}</outputDirectory>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
